# resume-verifier

./: .gitignore  README.md
backend/: .env.example  benchmark.py  cache.py  clients.py  extractor.py  main.py  models.py  parser.py  pyproject.toml  railway.json  requirements.txt  scorer.py  searcher.py  service.py
frontend/: index.html  package-lock.json  package.json  railway.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ProgressTracker.tsx  ResultsDashboard.tsx  UploadZone.tsx
